init Minio and File upload
